syntax = "proto3";

package myorg.todo.v1;

option csharp_namespace = "MyOrg.Todo.V1";
option go_package = "github.com/MyOrg/api-monorepo/pkg/pb/myorg/todo/v1";
option java_multiple_files = true;
option java_outer_classname = "TodoProto";
option java_package = "com.myorg.todo.v1";
option objc_class_prefix = "MTX";
option php_namespace = "MyOrg\\Todo\\V1";

import "google/protobuf/timestamp.proto";

message Todo {
    string id = 1;
    google.protobuf.Timestamp created_at = 2;
    string title = 3;
    bool done = 4;
    string creator_id = 5;
}